--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,7 +5,14 @@
     font-family: 'Work Sans', sans-serif;
   }
   .btn-primary{
-    
+border-radius: 8px;
+ background-color: #ff900e;
+ color: #fff;
+ padding: 20px 25px;
+ border: 0;
+ font-size: 1.25rem;
+ font-weight: 600;
+ cursor: pointer;
   }
   /*Header styles*/
   header{
@@ -48,4 +55,30 @@ nav li a{
 }
 .banner-description{
  color: #727272;   
+}
+.banner img{
+    margin-top: 30px;
+    width: 100%;
+}
+
+
+
+
+/*responsive styles*/
+@media screen and (max-width:576px) {
+    header{
+    padding: 20px;    
+    }
+  nav{
+    flex-direction: column;
+  }  
+}
+@media screen and (min-width:576px) and (max-width:960px) {
+  header{
+    padding: 50px;
+  }
+    nav{
+    flex-direction: column;
+  }  
+    
 }
