--- a/styles/architect.css
+++ b/styles/architect.css
@@ -63,7 +63,7 @@ nav li a{
 /* main styles*/
 main{
 max-width: 1440px;
-margin: 0 auto;    
+margin: 70px auto;    
 }
 /*teams styles*/
 .teams-container{
@@ -89,6 +89,9 @@ gap:1.5rem;
 .teams-title .text-features{
   color: #ff900e;
   font-weight: 700;
+}
+.teams-desc{
+  color: #727272;
 }
 
 
@@ -124,14 +127,23 @@ gap:1.5rem;
     }
   nav{
     flex-direction: column;
-  }  
+  } 
+ .teams-container{
+  flex-direction: column;
+ }  
+ .teams-img{
+  grid-template-columns: repeat(1,1fr);
+ }
+ .teams-content{
+ padding-left: 20px;
+ padding-right: 20px; 
+ }
 }
 @media screen and (min-width:576px) and (max-width:960px) {
   header{
     padding: 50px;
   }
-    nav{
+    nav, .teams-container{
     flex-direction: column;
   }  
-    
 }
