--- a/styles/architect.css
+++ b/styles/architect.css
@@ -14,6 +14,14 @@ border-radius: 8px;
  font-weight: 600;
  cursor: pointer;
   }
+  .gray-text{
+    color: #727272;
+  }
+  .section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color:#131313 ;
+}
   /*Header styles*/
   header{
     background: rgba(255, 144, 14, 0.10);   
@@ -93,8 +101,29 @@ gap:1.5rem;
 .teams-desc{
   color: #727272;
 }
-
-
+/*facts section*/
+.facts-card-container{
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card{
+  border-radius: 8px;
+  border:1px solid #ff900e ;
+  text-align: center;
+  padding:30px;
+}
+.facts-card-container .card-title{
+  font-weight: 600;
+  color: #727272;
+  font-size: 1.25rem;
+margin-top: 5px;
+}
+.facts-card-container .card-stats{
+font-size: 2.8rem;
+color: #424242;
+margin-top: 10px;
+margin-bottom: 10px;
+}
 
 
 
