--- a/styles/architect.css
+++ b/styles/architect.css
@@ -124,9 +124,20 @@ color: #424242;
 margin-top: 10px;
 margin-bottom: 10px;
 }
-
-
-
+/*sponsors styles*/
+.sponsors{
+  text-align: center;
+}
+.sponsors-img-container{
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 40px;
+  align-items: center;
+}
+.sponsors-img-container img{
+  width: 165px;
+}
 
 
 
@@ -157,22 +168,25 @@ margin-bottom: 10px;
   nav{
     flex-direction: column;
   } 
- .teams-container{
+ .teams-container,.facts-card-container,.sponsors-img-container{
   flex-direction: column;
  }  
  .teams-img{
   grid-template-columns: repeat(1,1fr);
  }
- .teams-content{
+ .teams-content,.facts-card-container{
  padding-left: 20px;
  padding-right: 20px; 
+ }
+ .facts-card-container{
+  gap: 20px;
  }
 }
 @media screen and (min-width:576px) and (max-width:960px) {
   header{
     padding: 50px;
   }
-    nav, .teams-container{
+    nav, .teams-container,.sponsors-img-container{
     flex-direction: column;
   }  
 }
