--- a/styles/architect.css
+++ b/styles/architect.css
@@ -101,6 +101,34 @@ gap:1.5rem;
 .teams-desc{
   color: #727272;
 }
+/*features section styles*/
+.features{
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+.features .section-title{
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+.features-content .card{
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0,0,0,0.06);
+}
+.ten-years-badge{
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 342px;
+  padding: 40px;
+}
+.ten-years-badge h2{
+ font-size: 4rem; 
+}
+
 /*facts section*/
 .facts-card-container{
   display: flex;
