--- a/styles/architect.css
+++ b/styles/architect.css
@@ -118,17 +118,28 @@ gap:1.5rem;
   background-color: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0,0,0,0.06);
 }
+.features-img img{
+  height: 60%;
+  margin-left: 50px;
+}
 .ten-years-badge{
   border-radius: 8px;
   background: #ff900e;
   color: #fff;
   width: 342px;
   padding: 40px;
+  text-align: center;
+  margin-top: -50px;
+ position: relative;
+ bottom: 100px;
 }
 .ten-years-badge h2{
  font-size: 4rem; 
+ margin: 0;
 }
-
+.ten-years-badge p{
+  font-size: 1.5rem;
+}
 /*facts section*/
 .facts-card-container{
   display: flex;
@@ -196,9 +207,19 @@ margin-bottom: 10px;
   nav{
     flex-direction: column;
   } 
- .teams-container,.facts-card-container,.sponsors-img-container{
+ .teams-container,.features,.facts-card-container,.sponsors-img-container{
   flex-direction: column;
  }  
+ .features-img img{
+  width: 90%;
+  margin-left: 0;
+ }
+ .ten-years-badge{
+  position: relative;
+  height: 60%;
+  bottom: -20px;
+
+ }
  .teams-img{
   grid-template-columns: repeat(1,1fr);
  }
@@ -214,7 +235,16 @@ margin-bottom: 10px;
   header{
     padding: 50px;
   }
-    nav, .teams-container,.sponsors-img-container{
+    nav, .teams-container,.features,.sponsors-img-container{
     flex-direction: column;
   }  
+  .teams-img{
+    grid-template-columns: repeat(1,1fr);
+  }
+  .facts-card-container{
+    flex-direction: column;
+  }
+  .features-img img{
+    width: 90%;
+  }
 }
